Added new becnhmark and made only negative values for CSTNs definitive